PR/56246: Yuichiro Naito: gprof(1) never show call graphs when profiling multi-threaded application